fix: bio text left-aligned for cleaner layout

--- a/css/style.css
+++ b/css/style.css
@@ -2039,7 +2039,7 @@ ul, ol {
   font-size: 1.15rem;
   line-height: 1.85;
   color: hsl(var(--foreground));
-  text-align: center;
+  text-align: left;
 }
 
 .bio-content p {
